1/7/2011 #2624, new credits logo from KSU 
1/7/2011 #2624, change KSU credits logo from PNG to medium JPG compression, decreases file size to 18K, still looks good
1/7/2011 #2624, change request: reduce size of KSU credits logo by 25%
1/7/2011 Updated copyright text and dates for phetcommon, see #2630
1/7/2011 ModelViewTransform: added viewToModel(Shape) and factored out transform inversion code
1/4/2011 added double buffering for the AWT splash screen, see #2617
1/3/2011 #2624, display KSU credits window during sim launch sequence
1/3/2011 deprecated SwingUtils.centerDialogInParent, use more general SwingUtils.centerInParent
1/3/2011 #2624, add ability to suppress warning when optional localized strings are missing
1/3/2011 #2624, Credits dialog: read credits from translated strings file, fix hyperlinks, add KSU-specific code
1/3/2011 #2640, update About dialog copyright to 2011
12-30-2010: #2624, major rewrite of CreditsDialog (messy, difficult to extend), added stubs for Translation credits
12-23-2010: in Property<T>, changed defaultValue to initialValue, and made getInitialValue public
12-21-2010: #2623, factor out common behavior for "Reset All" into ResetAllDelegate
12-21-2010: #2623, create ResetAllButtonNode, same functionality as ResetAllButton but for Piccolo buttons
12-21-2010: removed Property<T>.is, superclass should not create subclass (seems to have needed only by questionable syntax in GravityAndOrbitsCanvas)
12-21-2010: rename IsSelected to ValueEquals, to remove association with radio buttons
12-21-2010: change order of args to IsSelected to be consistent with PropertyRadioButton
12-16-2010: Improved ImmutableVector2D math API, adding plus, minus and times
12-16-2010: Improved toString for ImmutableVector2D and Property<T>
Changed some of the game strings - "Best" to "Your Best" and "New Best!" to "Your New Best".
Changed some of the game strings - "PERFECT!" to "Perfect", "NEW BEST!" to "New Best!", "Start!" to "Start". 