@@ -2,14 +2,36 @@
 package edu.colorado.phet.common.phetcommon.view;
 
 
+import java.util.ArrayList;
+
+import edu.colorado.phet.common.phetcommon.util.VoidFunction0;
+
 /**
- * PhetExit encapsulates the various ways of exiting a sim.
+ * PhetExit encapsulates the various ways of exiting a sim.  It also sends out notifications before System.exit(0) is
+ * called in case any final work needs to be done, as in the case of sim sharing.
  *
  * @author Sam Reid
  */
 public class PhetExit {
-    
+    private static ArrayList<VoidFunction0> exitListeners = new ArrayList<VoidFunction0>();//Listeners that are notified just before the PhetApplication exits
+
+    /**
+     * Add a listener to be notified just before the PhetApplication exits.
+     *
+     * @param listener the listener to notify just before the PhetApplication exits
+     */
+    public static void addExitListener( VoidFunction0 listener ) {
+        exitListeners.add( listener );
+    }
+
+    /**
+     * Notifies any listeners that the PhetApplication is about to exit,
+     * then exits the application by closing the VM with System.exit(0)
+     */
     public static void exit() {
+        for ( VoidFunction0 exitListener : exitListeners ) {
+            exitListener.apply();
+        }
         System.exit( 0 );
     }
 }
