@@ -1,4 +1,5 @@
-1/7/2011 #2624, new credits logo from KSU 
+1/12/2011 Added the capability to send out notifications before PhetApplication exits, see PhetExit
+1/7/2011 #2624, new credits logo from KSU
 1/7/2011 #2624, change KSU credits logo from PNG to medium JPG compression, decreases file size to 18K, still looks good
 1/7/2011 #2624, change request: reduce size of KSU credits logo by 25%
 1/7/2011 Updated copyright text and dates for phetcommon, see #2630
